Fix urls not wrapping on mobile devices.

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -28,6 +28,12 @@ h1, h2{
     margin: 2px;
 }
 
+.messages li a{
+    position: relative;
+    display:inline-block;
+    width:inherit;
+}
+
 .channels li{
     display: inline-block;
     border: solid 1px #ddd;
